fixed z-index on text-draggable

--- a/src/style.scss
+++ b/src/style.scss
@@ -29,3 +29,6 @@
     width: 20px;
     height: 20px;
 }
+.text-draggable {
+    z-index: 2147483647;
+}
